@@ -79,6 +79,16 @@
 :- pred tree234__tree234_to_assoc_list(tree234(K, V), assoc_list(K, V)).
 :- mode tree234__tree234_to_assoc_list(in, out) is det.
 
+:- pred tree234__foldl(pred(K, V, T, T), tree234(K, V), T, T).
+:- mode tree234__foldl(pred(in, in, in, out) is det, in, in, out) is det.
+:- mode tree234__foldl(pred(in, in, in, out) is semidet, in, in, out)
+		is semidet.
+:- mode tree234__foldl(pred(in, in, di, uo) is det, in, di, uo) is det.
+
+:- pred tree234__map_values(pred(K, V, W), tree234(K, V), tree234(K, W)).
+:- mode tree234__map_values(pred(in, in, out) is det, in, out) is det.
+:- mode tree234__map_values(pred(in, in, out) is semidet, in, out) is semidet.
+
 %------------------------------------------------------------------------------%
 %------------------------------------------------------------------------------%
 
@@ -2059,6 +2069,56 @@ tree234__tree234_to_assoc_list_2(four(K0, V0, K1, V1, K2, V2, T0, T1, T2, T3),
 	tree234__tree234_to_assoc_list_2(T2, [K2 - V2 | L1], L2),
 	tree234__tree234_to_assoc_list_2(T1, [K1 - V1 | L2], L3),
 	tree234__tree234_to_assoc_list_2(T0, [K0 - V0 | L3], L).
+
+%------------------------------------------------------------------------------%
+
+tree234__foldl(_Pred, empty, Acc, Acc).
+tree234__foldl(Pred, two(K, V, T0, T1), Acc0, Acc) :-
+	tree234__foldl(Pred, T0, Acc0, Acc1),
+	call(Pred, K, V, Acc1, Acc2),
+	tree234__foldl(Pred, T1, Acc2, Acc).
+tree234__foldl(Pred, three(K0, V0, K1, V1, T0, T1, T2), Acc0, Acc) :-
+	tree234__foldl(Pred, T0, Acc0, Acc1),
+	call(Pred, K0, V0, Acc1, Acc2),
+	tree234__foldl(Pred, T1, Acc2, Acc3),
+	call(Pred, K1, V1, Acc3, Acc4),
+	tree234__foldl(Pred, T2, Acc4, Acc).
+tree234__foldl(Pred, four(K0, V0, K1, V1, K2, V2, T0, T1, T2, T3), Acc0, Acc) :-
+	tree234__foldl(Pred, T0, Acc0, Acc1),
+	call(Pred, K0, V0, Acc1, Acc2),
+	tree234__foldl(Pred, T1, Acc2, Acc3),
+	call(Pred, K1, V1, Acc3, Acc4),
+	tree234__foldl(Pred, T2, Acc4, Acc5),
+	call(Pred, K2, V2, Acc5, Acc6),
+	tree234__foldl(Pred, T3, Acc6, Acc).
+
+%------------------------------------------------------------------------------%
+
+tree234__map_values(_Pred, empty, empty).
+tree234__map_values(Pred, Tree0, Tree) :-
+	Tree0 = two(K0, V0, Left0, Right0),
+	Tree  = two(K0, W0, Left, Right),
+	call(Pred, K0, V0, W0),
+	tree234__map_values(Pred, Left0, Left),
+	tree234__map_values(Pred, Right0, Right).
+tree234__map_values(Pred, Tree0, Tree) :-
+	Tree0 = three(K0, V0, K1, V1, Left0, Middle0, Right0),
+	Tree  = three(K0, W0, K1, W1, Left, Middle, Right),
+	call(Pred, K0, V0, W0),
+	call(Pred, K1, V1, W1),
+	tree234__map_values(Pred, Left0, Left),
+	tree234__map_values(Pred, Middle0, Middle),
+	tree234__map_values(Pred, Right0, Right).
+tree234__map_values(Pred, Tree0, Tree) :-
+	Tree0 = four(K0, V0, K1, V1, K2, V2, Left0, LMid0, RMid0, Right0),
+	Tree  = four(K0, W0, K1, W1, K2, W2, Left, LMid, RMid, Right),
+	call(Pred, K0, V0, W0),
+	call(Pred, K1, V1, W1),
+	call(Pred, K2, V2, W2),
+	tree234__map_values(Pred, Left0, Left),
+	tree234__map_values(Pred, LMid0, LMid),
+	tree234__map_values(Pred, RMid0, RMid),
+	tree234__map_values(Pred, Right0, Right).
 
 %------------------------------------------------------------------------------%
 
